Added Styles for CSS Foundations assignment

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -4,13 +4,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./recipesStyles.css">
   <title>Document</title>
 </head>
 <body>
-  <h1>Hawaiian Pizza</h1>
-  <p>This classic pizza dish recipe has a nice crunchy crust with flavorful toppings, including pineapple that has a slight smokey flavor.</p>
-  <img src="../images/pizza.webp" alt="Photo of Hawaiian Pizza">
-
+  <div id="title">
+    <h1>Hawaiian Pizza</h1>
+    <p>This classic pizza dish recipe has a nice crunchy crust with flavorful toppings, including pineapple that has a slight smokey flavor.</p>
+    <img src="../images/pizza.webp" alt="Photo of Hawaiian Pizza">
+  </div>
+ 
+<div>
   <h2>Ingredients</h2>
   <ul>
    <li>1 tablespoon extra-virgin olive oil, plus more for pan</li>
@@ -22,7 +26,9 @@
    <li>¼ cup thinly sliced red onion</li>
    <li>3 ounces Canadian bacon (about 4 slices), cut into 1-in. triangles</li>
   </ul>
+</div>
 
+<div>
   <h2>Directions</h2>
   <ol>
     <li>Preheat the oven to 500 degrees F (260 degrees C) with a rack in the lower position. Oil a large rimmed baking sheet with olive oil. </li>
@@ -31,5 +37,6 @@
     <li>On a lightly floured surface, roll dough to a 12-inch circle and place on the oiled baking sheet. Prick dough with a fork several times to reduce air bubbles. Spread pizza sauce evenly over dough, leaving a 1 1/2-inch border around edges. Sprinkle with cheese, onions, Canadian bacon, pineapple, and chopped bacon. </li>
     <li>Bake in preheated oven until cheese is melted and bubbly, toppings are lightly charred, and crust is golden brown, 10 to 15 minutes. Let stand 5 minutes before serving. </li>
   </ol>
+</div>
 </body>
 </html>
